# nix2deb

./: .dir-locals.el  .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  README.org  cabal.project  flake.nix  nix2deb.cabal  test.sh
.github/workflows/: ci.yaml
app/: Main.hs
app/Main/: Cli.hs  Log.hs
bindings-nix/: CHANGELOG.md  LICENSE  README.md  bindings-nix.cabal
bindings-nix/hs-bindgen/: generate-bindings
bindings-nix/hs-bindgen/specs/manual/: NixApiOpaqueTypes.yaml
bindings-nix/src/Nix/Api/: OpaqueTypes.hs
bindings-nix/test/: Main.hs
nix/: debug.nix  haskell.nix
nix/dev-shells/: default.nix  formatter.nix  git-hooks.nix  treefmt-cabal-gild.nix
nix/haskell/: default.nix  hs-bindgen.nix
nix/test-packages/: exe.c  exe.nix
src/: Nix2Deb.hs
src/Nix2Deb/: App.hs  Deb.hs  Effects.hs  Exceptions.hs  Map.hs  Nix.hs  Types.hs
src/Nix2Deb/Types/: DebVersion.hs  Main.hs  ThreadNumber.hs
src/Nix2Deb/Types/ThreadNumber/: TH.hs
