cabal-version: 3.0
name: nix2deb
version: 0.1.0.0
synopsis: Convert a Nix package to a deb package using other deb packages as dependencies.
homepage: https://github.com/jian-lin/nix2deb
license: MIT
license-file: LICENSE
author: Lin Jian
maintainer: me@linj.tech
category: Distribution
build-type: Simple
extra-doc-files: CHANGELOG.md

common defaults
  build-depends:
    base ^>=4.19.2.0,
    co-log ^>=0.6.1.2,
    relude ^>=1.2.2.0,

  default-extensions:
    BlockArguments
    DerivingStrategies
    NoImplicitPrelude
    OverloadedStrings

common warnings
  ghc-options: -Wall

library
  import: defaults, warnings
  exposed-modules:
    Nix2Deb
    Nix2Deb.App
    Nix2Deb.Deb
    Nix2Deb.Effects
    Nix2Deb.Exceptions
    Nix2Deb.Map
    Nix2Deb.Nix
    Nix2Deb.Types
    Nix2Deb.Types.DebVersion
    Nix2Deb.Types.Main
    Nix2Deb.Types.ThreadNumber
    Nix2Deb.Types.ThreadNumber.TH

  build-depends:
    directory ^>=1.3.8.5,
    edit-distance ^>=0.2.2.1,
    extra ^>=1.7.16,
    filepath ^>=1.4.301.0,
    safe-exceptions ^>=0.1.7.4,
    scalpel ^>=0.6.2.2,
    string-interpolate ^>=0.3.4.0,
    tagsoup ^>=0.14.8,
    template-haskell ^>=2.21.0.0,
    typed-process ^>=0.2.12.0,
    unliftio ^>=0.2.25.1,
    unordered-containers ^>=0.2.20,

  hs-source-dirs: src
  default-language: GHC2021

executable nix2deb
  import: defaults, warnings
  main-is: Main.hs
  other-modules:
    Main.Cli
    Main.Log

  build-depends:
    nix2deb,
    optparse-applicative ^>=0.18.1.0,
    uncaught-exception ^>=0.1.0,

  hs-source-dirs: app
  default-language: GHC2021
  ghc-options: -threaded

test-suite nix2deb-test
  import: defaults, warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    nix2deb
